Se agrego un archivo donde se guardan las obras que se agregaron por el administrados, se agregaron algunas validaciones

--- a/AppWpfLogin2P2C.csproj
+++ b/AppWpfLogin2P2C.csproj
@@ -151,5 +151,8 @@
   <ItemGroup>
     <Resource Include="Usuarios\singUp.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Usuarios\Obras.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
