--- a/AppWpfLogin2P2C.csproj
+++ b/AppWpfLogin2P2C.csproj
@@ -35,6 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
+      <HintPath>..\packages\BouncyCastle.Cryptography.2.4.0\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.4, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.4\lib\net461\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -55,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Administrador.cs" />
     <Compile Include="CaraUsr.xaml.cs">
       <DependentUpon>CaraUsr.xaml</DependentUpon>
     </Compile>
@@ -65,6 +72,8 @@
     <Compile Include="RegistroAdmin.xaml.cs">
       <DependentUpon>RegistroAdmin.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Usuario.cs" />
+    <Compile Include="Venta.cs" />
     <Compile Include="WinPrincipal.xaml.cs">
       <DependentUpon>WinPrincipal.xaml</DependentUpon>
     </Compile>
@@ -122,6 +131,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -145,14 +155,15 @@
   <ItemGroup>
     <Resource Include="images\LogoLogin Mariposa.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ImagenesG\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Usuarios\singUp.txt" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Usuarios\Obras.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Usuarios\Facturas.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
